Colour changes, removed borders... simplified

--- a/stylesheets/components/_menu.less
+++ b/stylesheets/components/_menu.less
@@ -2,17 +2,17 @@
 
   ul {
     & > li > ul > li.active > .item {
-      background-color: #e8f0fe !important;
+      background-color: #E6E6E6 !important;
     }
 
     li {
 
       &.active > a {
-        background-color: #e8eaed !important;
+        background-color: #CECCD2 !important;
       }
 
       a {
-        border-radius: 0 50em 50em 0;
+        border-radius: 0;
         font-weight: 500;
         font-size: 14px;
         //letter-spacing: .25px;
@@ -24,7 +24,7 @@
         }
 
         &:hover {
-          background-color: #dadce1 !important;
+          background-color: #CECCD2 !important;
           transition: .2s ease all;
         }
       }
