--- a/stylesheets/components/_visitor_log.less
+++ b/stylesheets/components/_visitor_log.less
@@ -4,6 +4,6 @@
 
 .dataTableVizVisitorLog .card {
   box-shadow: none;
-  border: 1px solid #e6e6e6;
-  border-radius: 8px;
+  border: none;
+  border-radius: 0px;
 }
