--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -12,15 +12,15 @@
 @import "components/_visitor_log";
 @import "components/_widget";
 
-@theme-color-brand: #1a73e8;
-@theme-color-background-base: #f8f9fa;
-@theme-color-header-background: #ffffff;
-@theme-color-header-text: #5f6368;
+@theme-color-brand: #CECCD2;
+@theme-color-background-base: #FAF9F6;
+@theme-color-header-background: #FAF9F6;
+@theme-color-header-text: #323036;
 
-@theme-color-widget-title-background: #f8f9fa;
-@theme-color-widget-title-text: #4a4a4a;
+@theme-color-widget-title-background: transparent;
+@theme-color-widget-title-text: #323036;
 
 @theme-color-menu-contrast-text: rgba(0,0,0,0.54);
-@theme-color-menu-contrast-textActive: #3c4043;
-@theme-color-menu-contrast-textSelected: #1a73e8;
-@theme-color-menu-contrast-background: transprent;
+@theme-color-menu-contrast-textActive: #828089;
+@theme-color-menu-contrast-textSelected: #CECCd2;
+@theme-color-menu-contrast-background: transparent;
