--- a/stylesheets/_colors.less
+++ b/stylesheets/_colors.less
@@ -1,12 +1,12 @@
-@theme-color-brand: #1a73e8;
-@theme-color-background-base: #f8f9fa;
-@theme-color-header-background: #ffffff;
-@theme-color-header-text: #5f6368;
+@theme-color-brand: #CECCD2;
+@theme-color-background-base: #faf9f6;
+@theme-color-header-background: #FAF9F6;
+@theme-color-header-text: #323036;
 
-@theme-color-widget-title-background: #f8f9fa;
-@theme-color-widget-title-text: #4a4a4a;
+@theme-color-widget-title-background: transparent;
+@theme-color-widget-title-text: #323036;
 
-@theme-color-menu-contrast-text: rgba(0,0,0,0.54);
-@theme-color-menu-contrast-textActive: #3c4043;
-@theme-color-menu-contrast-textSelected: #1a73e8;
+@theme-color-menu-contrast-text: rgba(0, 0, 0, 0.54);
+@theme-color-menu-contrast-textActive: #828089;
+@theme-color-menu-contrast-textSelected: #ceccd2;
 @theme-color-menu-contrast-background: transprent;
