--- a/stylesheets/components/_button.less
+++ b/stylesheets/components/_button.less
@@ -1,9 +1,14 @@
 .btn, input[type="button"], .button {
   box-shadow: none;
   text-decoration: none;
+  text-transform: uppercase;
+  border: none;
+  font-weight: bold;
+  letter-spacing: 1.5em;
 
   &:hover {
-    opacity: 0.8;
+    color: #CECCD2;
     box-shadow: none;
+    border: none;
   }
 }
