--- a/stylesheets/components/_card.less
+++ b/stylesheets/components/_card.less
@@ -1,8 +1,8 @@
 .card {
   //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
   box-shadow: none;
-  border: 1px solid #e6e6e6;
-  border-radius: 8px;
+  border: none;
+  border-radius: 0px;
 
   .card-content {
     padding: 5px 20px 20px 20px !important;
