--- a/stylesheets/components/_control.less
+++ b/stylesheets/components/_control.less
@@ -1,6 +1,6 @@
 #root .borderedControl {
   background-color: transparent;
-  border: 1px solid #e6e6e6; //#dadce1;
+  border: none;
   box-shadow: none;
   transition: .2s ease all;
   border-radius: 3px;
