--- a/stylesheets/components/_sparkline.less
+++ b/stylesheets/components/_sparkline.less
@@ -1,24 +1,24 @@
 // sparkline colors
-.sparkline-colors[data-name=backgroundColor] {
-  color: white;
+.sparkline-colors[data-name="backgroundColor"] {
+     color: white;
 }
 
-.sparkline-colors[data-name=lineColor] {
-  color: #058DC7;
+.sparkline-colors[data-name="lineColor"] {
+     color: #323036;
 }
 
-.sparkline-colors[data-name=minPointColor] {
-  color: #058DC7 //darken(#058DC7, 10);
+.sparkline-colors[data-name="minPointColor"] {
+     color: #323036 //darken(#058DC7, 10);
 }
 
-.sparkline-colors[data-name=maxPointColor] {
-  color: #058DC7 //darken(#058DC7, 10);
+.sparkline-colors[data-name="maxPointColor"] {
+     color: #323036 //darken(#058DC7, 10);
 }
 
-.sparkline-colors[data-name=lastPointColor] {
-  color: white; //hidden
+.sparkline-colors[data-name="lastPointColor"] {
+     color: white; //hidden
 }
 
-.sparkline-colors[data-name=fillColor] {
-  color: lighten(#058DC7, 55);
+.sparkline-colors[data-name="fillColor"] {
+     color: lighten(#323036, 55);
 }
