Troubeshooting visitor log colours

--- a/stylesheets/components/_control.less
+++ b/stylesheets/components/_control.less
@@ -15,11 +15,11 @@
 
   &:hover {
     transition: .2s ease all;
-    background: #e6e6e6 !important;
-    color: rgba(0, 0, 0, .75) !important;
+    background: transparent !important;
+    color: #e6e6e6 !important;
 
     .title {
-      color: rgba(0, 0, 0, .75) !important;
+      color:@theme-color-header-text!important;
     }
   }
 }
