--- a/stylesheets/components/_menu.less
+++ b/stylesheets/components/_menu.less
@@ -2,13 +2,13 @@
 
   ul {
     & > li > ul > li.active > .item {
-      background-color: #E6E6E6 !important;
+      background-color: transparent !important;
     }
 
     li {
 
       &.active > a {
-        background-color: #CECCD2 !important;
+        background-color: transparent !important;
       }
 
       a {
