--- a/stylesheets/components/_sparkline.less
+++ b/stylesheets/components/_sparkline.less
@@ -1,6 +1,6 @@
 // sparkline colors
 .sparkline-colors[data-name="backgroundColor"] {
-     color: white;
+     color: @theme-color-background-base;
 }
 
 .sparkline-colors[data-name="lineColor"] {
@@ -8,11 +8,11 @@
 }
 
 .sparkline-colors[data-name="minPointColor"] {
-     color: #323036 //darken(#058DC7, 10);
+     color: #323036;
 }
 
 .sparkline-colors[data-name="maxPointColor"] {
-     color: #323036 //darken(#058DC7, 10);
+     color: #323036;
 }
 
 .sparkline-colors[data-name="lastPointColor"] {
@@ -20,5 +20,5 @@
 }
 
 .sparkline-colors[data-name="fillColor"] {
-     color: lighten(#323036, 55);
+     color: transparent;
 }
