--- a/stylesheets/components/_visitor_log.less
+++ b/stylesheets/components/_visitor_log.less
@@ -1,9 +1,16 @@
 .theWidgetContent h2 {
-  font-weight: 300 !important;
+     font-weight: 300 !important;
 }
 
 .dataTableVizVisitorLog .card {
-  box-shadow: none;
-  border: none;
-  border-radius: 0px;
+     box-shadow: none;
+     border: none;
+     border-radius: 0px;
+}
+
+#visitsLive {
+     > .datetime,
+     > .settings {
+          background-color: @theme-color-background-base;
+     }
 }
