Added font folder

--- a/stylesheets/components/_visitor_log.less
+++ b/stylesheets/components/_visitor_log.less
@@ -9,8 +9,8 @@
 }
 
 #visitsLive {
-     > .datetime,
-     > .settings {
+     & .datetime,
+     & .settings {
           background-color: @theme-color-background-base;
      }
 }
