--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -12,6 +12,8 @@
 @import "components/_visitor_log";
 @import "components/_widget";
 
+@import "components/_login";
+
 @theme-color-brand: #CECCD2;
 @theme-color-background-base: #FAF9F6;
 @theme-color-header-background: #FAF9F6;
