--- a/stylesheets/components/_button.less
+++ b/stylesheets/components/_button.less
@@ -1,14 +1,18 @@
-.btn, input[type="button"], .button {
-  box-shadow: none;
-  text-decoration: none;
-  text-transform: uppercase;
-  border: none;
-  font-weight: bold;
-  letter-spacing: 1.5em;
+.btn,
+input[type="button"],
+.button {
+     box-shadow: none;
+     text-decoration: none;
+     text-transform: uppercase;
+     border: none;
+     font-weight: bold;
+     letter-spacing: 1.5em;
+     background-color: transparent;
 
-  &:hover {
-    color: #CECCD2;
-    box-shadow: none;
-    border: none;
-  }
+     &:hover {
+          color: #ceccd2;
+          box-shadow: none;
+          border: none;
+          background-color: transparent;
+     }
 }
