--- a/stylesheets/components/_button.less
+++ b/stylesheets/components/_button.less
@@ -1,6 +1,8 @@
 .btn,
 input[type="button"],
-.button {
+.button,
+#btn,
+input[type="submit"] {
      box-shadow: none;
      text-decoration: none;
      text-transform: uppercase;
@@ -8,7 +10,6 @@ input[type="button"],
      font-weight: bold;
      letter-spacing: 1.5em;
      background-color: transparent;
-
      &:hover {
           color: #ceccd2;
           box-shadow: none;
