--- a/stylesheets/components/_card.less
+++ b/stylesheets/components/_card.less
@@ -1,20 +1,20 @@
 .card {
-  //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
-  box-shadow: none;
-  border: none;
-  border-radius: 0px;
+     box-shadow: none;
+     border: none;
+     border-radius: 0px;
 
-  .card-content {
-    padding: 5px 20px 20px 20px !important;
-  }
+     .card-content {
+          padding: 5px 20px 20px 20px !important;
+     }
 
-  .card-table {
-    margin: 0 -20px !important;
-    border: 0;
-  }
+     .card-table {
+          margin: 0 -20px !important;
+          border: 0;
+     }
 
-  .enrichedHeadline .title, .card-title {
-    position: relative;
-    font-weight: 300 !important;
-  }
+     .enrichedHeadline .title,
+     .card-title {
+          position: relative;
+          font-weight: 300 !important;
+     }
 }
