Another line chart fix attempt

--- a/stylesheets/components/_sparkline.less
+++ b/stylesheets/components/_sparkline.less
@@ -1,6 +1,6 @@
 // sparkline colors
 .sparkline-colors[data-name="backgroundColor"] {
-     color: @theme-color-background-base;
+     color: white;
 }
 
 .sparkline-colors[data-name="lineColor"] {
@@ -20,5 +20,5 @@
 }
 
 .sparkline-colors[data-name="fillColor"] {
-     color: transparent;
+     color: lighten(#323036, 55);
 }
