Testing sparklines combos

--- a/stylesheets/components/_sparkline.less
+++ b/stylesheets/components/_sparkline.less
@@ -1,10 +1,10 @@
 // sparkline colors
 .sparkline-colors[data-name="backgroundColor"] {
-     color: white;
+     color: transparent;
 }
 
 .sparkline-colors[data-name="lineColor"] {
-     color: #323036;
+     color: #828089;
 }
 
 .sparkline-colors[data-name="minPointColor"] {
@@ -20,5 +20,5 @@
 }
 
 .sparkline-colors[data-name="fillColor"] {
-     color: lighten(#323036, 55);
+     color: #faf9f6;
 }
