--- a/stylesheets/components/_sparkline.less
+++ b/stylesheets/components/_sparkline.less
@@ -1,6 +1,6 @@
 // sparkline colors
 .sparkline-colors[data-name="backgroundColor"] {
-     color: transparent;
+     color: #faf9f6;
 }
 
 .sparkline-colors[data-name="lineColor"] {
@@ -20,5 +20,5 @@
 }
 
 .sparkline-colors[data-name="fillColor"] {
-     color: #faf9f6;
+     color: lighten(#323036, 200);
 }
