Fix nav message on login page

--- a/stylesheets/components/_login.less
+++ b/stylesheets/components/_login.less
@@ -1,11 +1,7 @@
 #loginPage .loginSection {
      margin-top: 12%;
-}
-
-#loginPage .loginSection .btn {
-     background-color: transparent;
-     &:hover {
-          background-color: transparent;
+     & #nav a {
+          font-size: 0.5em;
      }
 }
 
@@ -25,15 +21,10 @@
           width: 100%;
           color: #323036;
           font-size: 1.3em;
+          background-color: transparent;
           &:hover {
                color: #ceccd2;
+               background-color: transparent;
           }
      }
-     & p {
-          font-size: 0.5em;
-     }
-}
-
-a#login-form-nav {
-     font-size: 0.5em;
 }
