Chart fixes and login submit button colour change

--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -29,8 +29,9 @@
 
           .widgetName {
                padding: 0 0 15px 0 !important;
-               font-weight: 300;
-               color: @theme-color-header-text;
+               font-weight: 400;
+			color: @theme-color-header-text;
+			text-align:center;
           }
      }
 
