--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -13,16 +13,17 @@
 @import "components/_widget";
 
 @import "components/_login";
+@import "components/_charts";
 
-@theme-color-brand: #CECCD2;
-@theme-color-background-base: #FAF9F6;
-@theme-color-header-background: #FAF9F6;
+@theme-color-brand: #ceccd2;
+@theme-color-background-base: #faf9f6;
+@theme-color-header-background: #faf9f6;
 @theme-color-header-text: #323036;
 
 @theme-color-widget-title-background: transparent;
 @theme-color-widget-title-text: #323036;
 
-@theme-color-menu-contrast-text: rgba(0,0,0,0.54);
+@theme-color-menu-contrast-text: rgba(0, 0, 0, 0.54);
 @theme-color-menu-contrast-textActive: #828089;
-@theme-color-menu-contrast-textSelected: #CECCd2;
+@theme-color-menu-contrast-textSelected: #ceccd2;
 @theme-color-menu-contrast-background: transparent;
