--- a/stylesheets/components/_button.less
+++ b/stylesheets/components/_button.less
@@ -3,6 +3,7 @@ input[type="button"],
 .button,
 #btn,
 input[type="submit"] {
+     color: #323036 !important;
      box-shadow: none;
      text-decoration: none;
      text-transform: uppercase;
