Map and canvas background

--- a/stylesheets/components/_charts.less
+++ b/stylesheets/components/_charts.less
@@ -1,13 +1,9 @@
-#dataTable_5Chart > canvas.jqplot-piwik-ticks-canvas {
-     background: transparent;
+canvas {
+     background: @theme-color-background-base !important;
 }
 
-.UserCountryMap_map.kartograph > svg {
-     background: transparent;
-}
-
-div.UserCountryMap.card-content.dataTable {
-     background: transparent;
+#widgetUserCountryMapvisitorMap {
+     background: @theme-color-background-base;
 }
 
 td .label img {
