Widget title adjust

--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -29,9 +29,10 @@
 
           .widgetName {
                padding: 0 0 15px 0 !important;
-               font-weight: 400;
-			color: @theme-color-header-text;
-			text-align:center;
+               font-weight: 300;
+               color: @theme-color-header-text;
+               text-align: center;
+               text-transform: uppercase;
           }
      }
 
