--- a/stylesheets/components/_login.less
+++ b/stylesheets/components/_login.less
@@ -19,11 +19,11 @@
      }
      & input#login_form_submit {
           width: 100%;
-          color: #323036;
+          color: #323036 !important;
           font-size: 1.3em;
           background-color: transparent;
           &:hover {
-               color: #ceccd2;
+               color: #ceccd2 !important;
                background-color: transparent;
           }
      }
