Map fixes, chart background color & top menu

--- a/stylesheets/components/_charts.less
+++ b/stylesheets/components/_charts.less
@@ -1,8 +1,8 @@
-canvas {
+.dataTable.dataTableVizEvolution {
      background: @theme-color-background-base !important;
 }
 
-#widgetUserCountryMapvisitorMap {
+.UserCountryMap.card-content.dataTable {
      background: @theme-color-background-base;
 }
 
