--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -29,10 +29,11 @@
 
           .widgetName {
                padding: 0 0 15px 0 !important;
-               font-weight: 300;
+               font-weight: bold;
                color: @theme-color-header-text;
                text-align: center;
                text-transform: uppercase;
+               font-size: 0.8em;
           }
      }
 
