Troubleshooting style issues

--- a/stylesheets/components/_charts.less
+++ b/stylesheets/components/_charts.less
@@ -1,4 +1,4 @@
-.dataTable.dataTableVizEvolution {
+canvas.jqplot-piwik-ticks-canvas {
      background: @theme-color-background-base !important;
 }
 
