--- a/stylesheets/components/_login.less
+++ b/stylesheets/components/_login.less
@@ -6,7 +6,7 @@
 }
 
 .loginForm,
-.loginTwoFaForm {
+.loginTwoFaForm, .loginSection {
      & input[name="login_form_rememberme"],
      & label[for="login_form_rememberme"] {
           display: none;
