--- a/stylesheets/components/_menu.less
+++ b/stylesheets/components/_menu.less
@@ -35,10 +35,11 @@
 }
 
 #topmenu-corehome {
-	background-color: transparent;
-	&:hover, &:active {
-		background-color: transparent;
-		outline: none;
-		border-bottom: 1px solid @theme-color-header-text;
-	}
+     background: @theme-color-background-base;
+     &:hover,
+     &:active {
+          background: @theme-color-background-base;
+          outline: none;
+          border-bottom: 1px solid @theme-color-header-text;
+     }
 }
