--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -49,6 +49,7 @@
           .card {
                margin-top: -15px;
                border: none !important;
+               background-color: #faf9f6;
           }
      }
 }
