Change chart series colour

--- a/stylesheets/components/_menu.less
+++ b/stylesheets/components/_menu.less
@@ -34,11 +34,12 @@
      padding-left: 65px !important;
 }
 
-#topmenu-corehome {
-     background: @theme-color-background-base;
+#topmenu-corehome,
+nav ul a {
+     background-color: @theme-color-background-base;
      &:hover,
      &:active {
-          background: @theme-color-background-base;
+          background-color: @theme-color-background-base;
           outline: none;
           border-bottom: 1px solid @theme-color-header-text;
      }
