Changing map colors

--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -14,6 +14,7 @@
 
 @import "components/_login";
 @import "components/_charts";
+@import "components/_maps";
 
 @theme-color-brand: #ceccd2;
 @theme-color-background-base: #faf9f6;
