More visitor map color edits

--- a/stylesheets/components/_charts.less
+++ b/stylesheets/components/_charts.less
@@ -1,3 +1,10 @@
 canvas.jqplot-piwik-ticks-canvas {
      background: @theme-color-background-base !important;
 }
+
+// Graph series 1
+
+@graph-colors-data-series0: #323036; // light blue 50 series (800)
+@graph-series0-shade1-color: #828089; // (A200)
+@graph-series0-shade2-color: #ceccd2; // (A400)
+@graph-series0-shade3-color: #e6e6e6; // (A700)
