--- a/stylesheets/components/_maps.less
+++ b/stylesheets/components/_maps.less
@@ -20,7 +20,7 @@ td .label img {
 }
 
 .visitor-map[data-name="color-range-start-normal"] {
-     color: #828089;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="color-range-end-choropleth"] {
@@ -28,15 +28,15 @@ td .label img {
 }
 
 .visitor-map[data-name="color-range-end-normal"] {
-     color: rgb(0, 0, 0);
+     color: #323036;
 }
 
 .visitor-map[data-name="country-highlight-color"] {
-     color: #f4f45b;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="country-selected-color"] {
-     color: #f4f45b;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="unknown-region-fill-color"] {
@@ -44,19 +44,19 @@ td .label img {
 }
 
 .visitor-map[data-name="unknown-region-stroke-color"] {
-     color: #bbb;
+     color: @theme-color-background-base;
 }
 
 .visitor-map[data-name="region-stroke-color"] {
-     color: #3c6fb6;
+     color: #e6e6e6;
 }
 
 .visitor-map[data-name="region-selected-color"] {
-     color: #f4f45b;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="region-highlight-color"] {
-     color: #f4f45b;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="invisible-region-background"] {
@@ -72,11 +72,11 @@ td .label img {
 }
 
 .visitor-map[data-name="city-highlight-stroke-color"] {
-     color: #000000;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="city-highlight-fill-color"] {
-     color: #f4f45b;
+     color: #ceccd2;
 }
 
 .visitor-map[data-name="city-highlight-label-color"] {
