--- a/stylesheets/components/_charts.less
+++ b/stylesheets/components/_charts.less
@@ -2,7 +2,7 @@ canvas.jqplot-piwik-ticks-canvas {
      background: @theme-color-background-base !important;
 }
 
-// Graph series 1
+// Graph series colours (1)
 
 @graph-colors-data-series0: #323036;
 @graph-series0-shade1-color: #828089;
