--- a/stylesheets/components/_maps.less
+++ b/stylesheets/components/_maps.less
@@ -8,7 +8,7 @@ td .label img {
 
 // Visitor map colors
 .visitor-map[data-name="no-data-color"] {
-     color: @theme-color-background-base;
+     color: white;
 }
 
 .visitor-map[data-name="one-country-color"] {
@@ -40,11 +40,11 @@ td .label img {
 }
 
 .visitor-map[data-name="unknown-region-fill-color"] {
-     color: @theme-color-background-base;
+     color: white;
 }
 
 .visitor-map[data-name="unknown-region-stroke-color"] {
-     color: @theme-color-background-base;
+     color: #e6e6e6;
 }
 
 .visitor-map[data-name="region-stroke-color"] {
@@ -60,15 +60,15 @@ td .label img {
 }
 
 .visitor-map[data-name="invisible-region-background"] {
-     color: @theme-color-background-base;
+     color: #e6e6e6;
 }
 
 .visitor-map[data-name="city-label-color"] {
-     color: @theme-color-background-base;
+     color: #e6e6e6;
 }
 
 .visitor-map[data-name="city-stroke-color"] {
-     color: @theme-color-background-base;
+     color: #e6e6e6;
 }
 
 .visitor-map[data-name="city-highlight-stroke-color"] {
