Padding around login box

--- a/stylesheets/components/_login.less
+++ b/stylesheets/components/_login.less
@@ -6,7 +6,9 @@
 }
 
 .loginForm,
-.loginTwoFaForm, .loginSection {
+.loginTwoFaForm,
+.loginSection {
+     padding: 10px;
      & input[name="login_form_rememberme"],
      & label[for="login_form_rememberme"] {
           display: none;
