Fixed menu active

--- a/stylesheets/components/_menu.less
+++ b/stylesheets/components/_menu.less
@@ -38,7 +38,8 @@
 nav ul a {
      background-color: @theme-color-background-base;
      &:hover,
-     &:active {
+     &:active,
+     &:focus {
           background-color: @theme-color-background-base;
           outline: none;
           border-bottom: 1px solid @theme-color-header-text;
