Font weight on login button

--- a/stylesheets/components/_login.less
+++ b/stylesheets/components/_login.less
@@ -26,6 +26,7 @@
           font-size: 1.3em;
           letter-spacing: 0.2em;
           background-color: transparent;
+          font-weight: bold;
           &:hover {
                color: #ceccd2 !important;
                background-color: transparent;
