--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -1,5 +1,5 @@
 .widget {
-     background-color: transparent;
+     background-color: @theme-color-background-base;
      box-shadow: none;
      border: none !important;
 
