Fix: Font looks bold with latest update.

--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -24,3 +24,7 @@
 @theme-color-menu-contrast-textActive: #828089;
 @theme-color-menu-contrast-textSelected: #ceccd2;
 @theme-color-menu-contrast-background: transparent;
+
+html {
+     font-weight: lighter;
+}
